--- a/css/styles.css
+++ b/css/styles.css
@@ -415,3 +415,11 @@ h3 {
     margin: 5px 0 0;
     font-size: 14px;
 }
+
+input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
